--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,11 @@
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.5.3",
+    "create-react-class": "^15.7.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
