--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
