--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-star-ratings": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
